# ipctl

./: .gitignore  Makefile.am  README.md  configure.ac
include/libipctl/: .gitignore  Makefile.am  ipctl-nl.h  ipctl.h
src/cli/: .gitignore  Makefile.am  ipctl.c
src/libipctl/: .gitignore  Makefile.am  libipctl.c
src/module/: .gitignore  Kbuild  Makefile  ipctlm.c
